Remove interactive stuff using HTML tags

--- a/3DRotations.ipynb
+++ b/3DRotations.ipynb
@@ -193,9 +193,12 @@
     "\n",
     "The geodesic between two angles is an interpolation among the signed\n",
     "angular distance:\n",
+    "\n",
     "$$\\theta(s) = (\\theta_1 + s \\cdot diff(\\theta_2,\\theta_1)) \\mod (2\\pi).$$\n",
+    "\n",
     "The geodesic distance on $SO(2)$ is absolute angular distance, which is\n",
     "simply the absolute value of the signed distance\n",
+    "\n",
     "$$d(\\theta_1,\\theta_2) = | diff(\\theta_2,\\theta_1) |.$$"
    ]
   },
@@ -221,7 +224,9 @@
     "\n",
     "Although we usually use a vector of parameters to describe elements of these spaces, this representation (in $\\mathbb{R}^n$) does not capture their connectivity perfectly.  The vector representation will have deficiencies in having double representations of the same object, infinite representations of the same object (singularities), and in interpolation, which may not produce geodesics.\n",
     "\n",
-    "Let us first consider a simpler example that will illustrate several of the issues we will come across when representing 3D rotations.  The latitude and longitude representation of the unit sphere (spherical coordinates), where each point has coordinates $$\\mathbf{x}(\\theta,\\phi) = \\begin{bmatrix} \\cos \\theta \\cos \\phi \\\\ \\sin \\theta \\cos \\phi \\\\ \\sin \\phi \\end{bmatrix}.$$\n",
+    "Let us first consider a simpler example that will illustrate several of the issues we will come across when representing 3D rotations.  The latitude and longitude representation of the unit sphere (spherical coordinates), where each point has coordinates\n",
+    "\n",
+    "$$\\mathbf{x}(\\theta,\\phi) = \\begin{bmatrix} \\cos \\theta \\cos \\phi \\\\ \\sin \\theta \\cos \\phi \\\\ \\sin \\phi \\end{bmatrix}.$$\n",
     "Here $\\theta \\in [0,2\\pi)$ gives the longitude and $\\phi \\in [-\\pi/2,\\pi/2]$ gives the latitude.\n",
     "\n",
     "Since each point on the sphere can be represented by some $(\\theta,\\phi)$ pair, this shows that the inherent dimensionality of $S_2$ is no more than 2.\n",
@@ -319,7 +324,9 @@
     "--------------------\n",
     "\n",
     "Now let us return back to the 3D rotation case. As described before, 3D rotations\n",
-    "are $3\\times 3$ matrices with the following entries: $$R = \\begin{bmatrix}\n",
+    "are $3\\times 3$ matrices with the following entries:\n",
+    "\n",
+    "$$R = \\begin{bmatrix}\n",
     "r_{11} & r_{12} & r_{13} \\\\\n",
     "r_{21} & r_{22} & r_{23} \\\\\n",
     "r_{31} & r_{32} & r_{33} \n",
@@ -397,6 +404,7 @@
     "\n",
     "The rotation about the $X$ axis is similar, with a 2D rotation matrix\n",
     "appearing along the $Y$ and $Z$ axes:\n",
+    "\n",
     "$$R_X(\\theta) = \\begin{bmatrix}\n",
     "1 & 0 & 0 \\\\\n",
     "0 & \\cos \\theta  & -\\sin \\theta  \\\\\n",
@@ -407,7 +415,9 @@
     "and $Z$ entries perform a 2D rotation.\n",
     "\n",
     "Finally, the rotation about the $Y$ axis is similar, but with a sign\n",
-    "switch of the $\\sin$ terms: $$R_Y(\\theta) = \\begin{bmatrix}\n",
+    "switch of the $\\sin$ terms:\n",
+    "\n",
+    "$$R_Y(\\theta) = \\begin{bmatrix}\n",
     "\\cos \\theta & 0 & \\sin\\theta \\\\\n",
     "0 & 1 & 0\\\\\n",
     "-\\sin \\theta & 0 & \\cos \\theta   \n",
@@ -437,7 +447,9 @@
     "$Z$, are rotated to post-rotation axes $X^\\prime$, $Y^\\prime$, and\n",
     "$Z^\\prime$, respectively. The first column represents the coordinates of\n",
     "$X^\\prime$ axis *relative to the original frame* after rotation\n",
-    "$$\\mathbf{x}^\\prime = \\begin{bmatrix} r_{11} \\\\ r_{21} \\\\ r_{31} \\end{bmatrix}.$$ "
+    "\n",
+    "$$\\mathbf{x}^\\prime = \\begin{bmatrix} r_{11} \\\\ r_{21} \\\\ r_{31} \\end{bmatrix}.$$\n",
+    "\n"
    ]
   },
   {
@@ -530,7 +542,10 @@
     "\n",
     "This answer is incorrect, and is also the answer that would have been\n",
     "obtained through composing the matrices:\n",
-    "$$R_X(90^\\circ) R_Z(90^\\circ) \\mathbf{p} + \\mathbf{t}$$ Instead, the key problem\n",
+    "\n",
+    "$$R_X(90^\\circ) R_Z(90^\\circ) \\mathbf{p} + \\mathbf{t}$$\n",
+    "\n",
+    "Instead, the key problem\n",
     "is that after the first rotation, the local $X$ axis has rotated along\n",
     "with the body, and is no longer equivalent to the $X$ axis in world\n",
     "coordinates! Instead, it is aligned with the world's $Y$ axis. The\n",
@@ -547,7 +562,10 @@
     "\n",
     "It is also confusing that the correct result is also obtained by\n",
     "switching the order of the rotations!\n",
-    "$$R_Z(90^\\circ) R_X(90^\\circ) \\mathbf{p} + \\mathbf{t}.$$ The reason why this\n",
+    "\n",
+    "$$R_Z(90^\\circ) R_X(90^\\circ) \\mathbf{p} + \\mathbf{t}.$$\n",
+    "\n",
+    "The reason why this\n",
     "switched order works is that in the first rotation about $X$, the local\n",
     "and world $X$ axis are aligned. The second rotation about $Z$ is\n",
     "performed with respect to the world $Z$ axis, which is also equivalent\n",
@@ -576,7 +594,10 @@
     "assumes that a vehicle's roll angle is about its $X$ axis, pitch is\n",
     "about its $Y$ axis, and yaw is about its $Z$ axis\n",
     "([Fig. 4](#fig:RollPitchYaw)), with the composite rotation given by:\n",
-    "$$R_{rpy}(\\phi,\\theta,\\psi) = R_Z(\\phi) R_Y(\\theta) R_X(\\psi)$$ Notice\n",
+    "\n",
+    "$$R_{rpy}(\\phi,\\theta,\\psi) = R_Z(\\phi) R_Y(\\theta) R_X(\\psi)$$\n",
+    "\n",
+    "Notice\n",
     "that the order of rotation axes is $Z$, $Y$, $X$, and this is also known\n",
     "as $ZYX$ convention. (Note that in order of application, this applies\n",
     "roll (X) first, then pitch (Y), then yaw (Z).)\n",
@@ -593,15 +614,21 @@
     "***************\n",
     "\n",
     "There are a multitude of other conventions possible, each of the form\n",
+    "\n",
     "$$R_{ABC}(\\phi,\\theta,\\psi) = R_A(\\phi) R_B(\\theta) R_C(\\psi)\n",
-    "\\label{eq:EulerAngles}$$ where $A$, $B$, and $C$ are one of $X$, $Y$, or\n",
+    "\\label{eq:EulerAngles}$$\n",
+    "\n",
+    "where $A$, $B$, and $C$ are one of $X$, $Y$, or\n",
     "$Z$. To be a valid convention, the span of possible results from the\n",
     "convention must span the range of possible rotation matrices, and this\n",
     "means that no two subsequent axes may be the same, e.g., $XXY$ is not\n",
     "permissible, since two combined rotations about one axis are equivalent\n",
     "to a single rotation about that axis. However, $A$ and $C$ may indeed be\n",
     "the same, for example, in $ZYZ$ convention:\n",
-    "$$R_{ZYZ}(\\phi,\\theta,\\psi) = R_Z(\\phi) R_Y(\\theta) R_Z(\\psi)$$ Here the\n",
+    "\n",
+    "$$R_{ZYZ}(\\phi,\\theta,\\psi) = R_Z(\\phi) R_Y(\\theta) R_Z(\\psi)$$\n",
+    "\n",
+    "Here the\n",
     "intervening $Y$ rotation modifies the axis by which one of the $R_Z$\n",
     "terms rotates, and can in fact span all rotation matrices.\n",
     "\n",
@@ -617,7 +644,7 @@
     "terms to the sine and cosine terms of the computed rotation matrix,\n",
     "e.g., for roll-pitch-yaw convention:\n",
     "\n",
-    "$$\n",
+    "\n",
     "R_{rpy} =  \\begin{bmatrix}\n",
     "r_{11} & r_{12} & r_{13} \\\\\n",
     "r_{21} & r_{22} & r_{23} \\\\\n",
@@ -627,7 +654,7 @@
     "s_1 c_2  & c_1 c_3 + s_1 s_2 s_3 &  s_1 s_2 c_3 - c_1 s_3 \\\\\n",
     "- s_2    & c_2 s_3               & c_2 c_3  \n",
     "\\end{bmatrix}\n",
-    "$$\n",
+    "\n",
     "\n",
     "where we use the shorthand $c_1 = \\cos \\phi$,\n",
     "$s_1 = \\sin \\phi$, $c_2 = \\cos \\theta$, $s_2 = \\sin \\theta$,\n",
@@ -748,7 +775,9 @@
     "$\\mathbf{p}_\\parallel$ parallel to $\\mathbf{a}$ and a component $\\mathbf{p}_\\perp$\n",
     "orthogonal to $\\mathbf{a}$ such that $\\mathbf{p} = \\mathbf{p}_\\parallel + \\mathbf{p}_\\perp$.\n",
     "\n",
+    "\n",
     "$$\\mathbf{p}_\\parallel = (\\mathbf{a} \\cdot \\mathbf{p}) \\mathbf{a}$$\n",
+    "\n",
     "$$\\mathbf{p}_\\perp = \\mathbf{p} - (\\mathbf{a} \\cdot \\mathbf{p}) \\mathbf{a}$$\n",
     "\n",
     "The rotation leaves $\\mathbf{p}_\\parallel$ unchanged, and rotates the\n",
@@ -769,11 +798,17 @@
     "axes are $(0,-1)$, so that post rotation, $\\mathbf{p}_\\perp^\\prime$ will have\n",
     "coordinates $(\\sin \\theta, - \\cos \\theta)$. Projecting these coordiantes\n",
     "back into the original space, we have\n",
+    "\n",
     "$$\\mathbf{p}_\\perp^\\prime = \\sin \\theta (\\mathbf{a} \\times \\mathbf{p}) + \\cos \\theta \\mathbf{p}_\\perp$$\n",
+    "\n",
     "Reconstructing the rotated point $\\mathbf{p}^\\prime$, we obtain:\n",
+    "\n",
     "$$\\mathbf{p}^\\prime = (\\mathbf{a} \\cdot \\mathbf{p}) \\mathbf{a} + \\sin \\theta (\\mathbf{a} \\times \\mathbf{p}) +  \\cos \\theta (\\mathbf{p} - (\\mathbf{a} \\cdot \\mathbf{p}) \\mathbf{a}))$$\n",
+    "\n",
     "which is often rearranged to group terms:\n",
+    "\n",
     "$$\\mathbf{p}^\\prime = \\cos \\theta \\mathbf{p} + \\sin \\theta (\\mathbf{a} \\times \\mathbf{p}) + (1-\\cos \\theta) (\\mathbf{a} \\cdot \\mathbf{p}) \\mathbf{a}.$$\n",
+    "\n",
     "\n",
     "Although this formula gives an expression for the transform, we can also\n",
     "rearrange terms to express it as a matrix. We will use the cross-product\n",
@@ -819,11 +854,13 @@
    "source": [
     "The parenthesized term is the rotation matrix\n",
     "corresponding to the axis-angle representation:\n",
+    "\n",
     "$$R_{aa}(\\mathbf{a},\\theta) = \n",
     "I + \\sin \\theta \\hat{\\mathbf{a}} + (1-\\cos\\theta) \\hat{\\mathbf{a}}^2.$$\n",
     "\n",
     "For rotation vector representation we simply convert to axis-angle form\n",
     "and use the formula above.\n",
+    "\n",
     "$$R_m(\\mathbf{m}) = R_{aa}(\\mathbf{m} / \\| \\mathbf{m} \\|, \\| \\mathbf{m} \\|)$$"
    ]
   },
@@ -837,13 +874,19 @@
     "\n",
     "To convert back from a rotation matrix $R$ to axis-angle representation,\n",
     "we can calculate the entries of $R_{aa}(\\mathbf{a},\\theta)$ and invert the\n",
-    "equation to match the entries of $R$: $$R = \\begin{bmatrix}\n",
+    "equation to match the entries of $R$:\n",
+    "\n",
+    "$$R = \\begin{bmatrix}\n",
     "r_{11} & r_{12} & r_{13} \\\\\n",
     "r_{21} & r_{22} & r_{23} \\\\\n",
     "r_{31} & r_{32} & r_{33} \n",
     "\\end{bmatrix} = \\begin{bmatrix}\n",
     "\\cos\\theta  I + \\sin \\theta \\hat{\\mathbf{a}} + (1-\\cos\\theta ) \\mathbf{a} \\mathbf{a}^T\n",
-    "\\end{bmatrix}$$ where we have used the fact that $$\\hat{\\mathbf{a}}^2 = \n",
+    "\\end{bmatrix}$$\n",
+    "\n",
+    "where we have used the fact that\n",
+    "\n",
+    "$$\\hat{\\mathbf{a}}^2 = \n",
     "\\begin{bmatrix}\n",
     "0 & -a_z & a_y \\\\\n",
     "a_z & 0 & -a_x \\\\\n",
@@ -853,11 +896,18 @@
     "a_x a_y & -a_x^2 - v_z^2 & a_y a_z \\\\\n",
     "a_x a_z & a_y a_z & -a_x^2 - a_y^2\n",
     "\\end{bmatrix}\n",
-    "= \\mathbf{a} \\mathbf{a}^T - I.$$ Taking the trace of $R$, we get\n",
+    "= \\mathbf{a} \\mathbf{a}^T - I.$$\n",
+    "\n",
+    "Taking the trace of $R$, we get\n",
+    "\n",
     "$$tr(R) = 3 \\cos \\theta + (1-\\cos \\theta) tr(\\mathbf{a} \\mathbf{a}^T) = 3 \\cos \\theta + (1 - \\cos\\theta) (\\mathbf{a} \\cdot \\mathbf{a}) = 1 + 2 \\cos \\theta.$$\n",
+    "\n",
     "Hence, we have the relationship:\n",
+    "\n",
     "$$\\theta = \\cos^{-1} \\left(\\frac{tr(R)-1}{2}\\right)\n",
-    "\\label{eq:RotationAbsoluteAngle}$$ which gives the *absolute angle* of a\n",
+    "\\label{eq:RotationAbsoluteAngle}$$\n",
+    "\n",
+    "which gives the *absolute angle* of a\n",
     "rotation matrix. This is also significant because it is the minimal\n",
     "angle needed to rotate from the identity matrix to $R$, and hence is a\n",
     "useful pseudo-norm for 3D rotations.\n",
@@ -867,11 +917,14 @@
     "$r_{12} - r_{21} = -a_z \\sin \\theta + (1-\\cos \\theta) a_x a_y - (a_z \\sin \\theta + (1-\\cos \\theta) a_x a_y) = -2 a_z \\sin \\theta$,\n",
     "canceling out the contribution of the matrix $\\mathbf{a} \\mathbf{a}$ since it is\n",
     "symmetric. Hence if $\\sin \\theta \\neq 0$, we can determine\n",
+    "\n",
     "$$\\begin{split}\n",
     "a_x &=  (r_{32}-r_{23}) / 2 \\sin \\theta \\\\\n",
     "a_y &=  (r_{13}-r_{31}) / 2 \\sin \\theta \\\\\n",
     "a_z &=  (r_{21}-r_{12}) / 2 \\sin \\theta.\n",
-    "\\end{split}$$ In the case where $\\sin \\theta = 0$, we could either have\n",
+    "\\end{split}$$\n",
+    "\n",
+    "In the case where $\\sin \\theta = 0$, we could either have\n",
     "the case where $\\theta = 0$, in which case $R$ is an identity matrix and\n",
     "any axis will do, or $\\theta = \\pi$, and more work is needed to\n",
     "determine the true axis of rotation. In this case, $\\cos \\theta = -1$,\n",
@@ -916,7 +969,11 @@
     "conveniently represents the geodesic curve from the identity rotation to\n",
     "any given rotation. If $R_1$ is a given rotation matrix with axis-angle\n",
     "form $(\\mathbf{a},\\theta)$, then the geodesic interpolation from $I$ to $R_1$\n",
-    "is given by the curve $$R(s) = R_{aa}(\\mathbf{a},s\\theta)$$ where at $s=0$\n",
+    "is given by the curve\n",
+    "\n",
+    "$$R(s) = R_{aa}(\\mathbf{a},s\\theta)$$\n",
+    "\n",
+    "where at $s=0$\n",
     "the result is the identity, and at $s=1$ the result is $R_1$.\n",
     "\n",
     "### Geodesic interpolation\n",
@@ -924,7 +981,10 @@
     "We apply the geodesic scaling operation to produce geodesic\n",
     "interpolation between two rotations. Given an initial rotation $R_0$ and\n",
     "a final rotation $R_1$, we may perform the interpolation\n",
-    "$$R(s) = R_0 R_{aa}(\\mathbf{a},s\\theta)$$ where $(\\mathbf{a},\\theta)$ is the axis\n",
+    "\n",
+    "$$R(s) = R_0 R_{aa}(\\mathbf{a},s\\theta)$$\n",
+    "\n",
+    "where $(\\mathbf{a},\\theta)$ is the axis\n",
     "angle representation of the relative rotation $R_0^T R_1$. (Verify that\n",
     "$R(0) = R_0$ and $R(1) = R_1$.)\n",
     "\n",
@@ -953,7 +1013,11 @@
     "\n",
     "Quaternions $(q_0,q_1,q_2,q_3)$ are composed of 1 real coordinate $q_0$\n",
     "and three imaginary coordinates $q_1$, $q_2$, and $q_3$ that represent a\n",
-    "complex number $$q = q_0 + i q_1 + j q_2 + k q_3$$ where $i$, $j$, and\n",
+    "complex number\n",
+    "\n",
+    "$$q = q_0 + i q_1 + j q_2 + k q_3$$\n",
+    "\n",
+    "where $i$, $j$, and\n",
     "$k$ are imaginary numbers defined such that\n",
     "\n",
     "-   $i^2 = j^2 = k^2 = -1$\n",
@@ -989,10 +1053,14 @@
     "quaternion $p = (0,x,y,z)$, there is an operation called the\n",
     "*conjugation* of $p$ by a unit quaternion $q$ so that the result gives a\n",
     "rotated point $p^\\prime = (0,x^\\prime,y^\\prime,z^\\prime)$:\n",
-    "$$p^\\prime = q p q^{-1}.$$ More specifically, the quaternion is related\n",
+    "\n",
+    "$$p^\\prime = q p q^{-1}.$$\n",
+    "\n",
+    "More specifically, the quaternion is related\n",
     "to axis-angle representation $(\\mathbf{a},\\theta)$ using the conversion\n",
     "$(q_0,q_1,q_2,q_3) = ( \\cos (\\theta / 2), \\sin (\\theta / 2) a_x, \\sin (\\theta / 2) a_y, \\sin (\\theta / 2) a_z)$.\n",
     "Also, the rotation matrix defined by a quaternion is given by:\n",
+    "\n",
     "$$R_q(q) = \\left[\\begin{array}{ccc}\n",
     "2 (q_0^2 + q_1^2 ) - 1 & 2 (q_1 q_2 - q_0 q_3)  & 2 (q_1 q_3 + q_0 q_2) \\\\\n",
     "2(q_1 q_2 + q_0 q_3 )  & 2 (q_0^2 + q_2^2 ) - 1 & 2 (q_2 q_3 - q_0 q_1) \\\\\n",
@@ -1004,7 +1072,10 @@
     "Quaternions are similar to points on a 4-D unit sphere, but they have\n",
     "the property that a quaternion and its negative produce equivalent\n",
     "rotations. This can be easily seen from the conjugation equation:\n",
-    "$$p^\\prime = q p q^{-1} = (-q) p (-q)^{-1}.$$ As a result, the space of\n",
+    "\n",
+    "$$p^\\prime = q p q^{-1} = (-q) p (-q)^{-1}.$$\n",
+    "\n",
+    "As a result, the space of\n",
     "rotations could be thought of as a 4-D sphere except warped so that\n",
     "points on the opposite sides of the sphere are mapped to the same\n",
     "rotation. This representation makes certain operations, like\n",
@@ -1035,7 +1106,9 @@
     "Next, the angle $\\theta$ between the two quaternions is computed\n",
     "according to $\\theta = \\cos^{-1} (q \\cdot p)$. Finally, the interpolated\n",
     "quaternion is given by\n",
+    "\n",
     "$$r(s) = \\frac{\\sin ((1-s) \\theta)}{\\sin \\theta} q + \\frac{\\sin (s \\theta)}{\\sin \\theta} p.$$\n",
+    "\n",
     "It can be shown that this is a geodesic and interpolates across the\n",
     "great circle at constant velocity."
    ]
@@ -1167,7 +1240,66 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "id": "1NtX7M-5st94"
+    "tags": [
+     "remove_cell_html"
+    ]
+   },
+   "source": [
+    "## Interactive quiz"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "code_folding": [
+     0
+    ],
+    "tags": [
+     "remove_cell_html"
+    ]
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<link rel=\"stylesheet\" href=\"//stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css\"/>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "33121fc02e1a41ce8ae906d86030c2de",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "VBox(children=(HTML(value='<style>\\n            .correct { background:#8f8;padding:10px 25px 10px 25px;width:4…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "#This code must be run from the RoboticSystemsBook folder\n",
+    "from IPython.display import display,Markdown\n",
+    "from rsbook_code.assessment import quiz\n",
+    "quiz.show(\"rotations\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "tags": [
+     "remove_cell_html"
+    ]
    },
    "source": [
     "## Interactive examples\n",
@@ -1179,7 +1311,9 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "id": "LssVpUpJst94"
+    "tags": [
+     "remove_cell_html"
+    ]
    },
    "source": [
     "### Comparing 3D rotation representations\n",
@@ -1200,13 +1334,9 @@
     "code_folding": [
      0
     ],
-    "colab": {
-     "referenced_widgets": [
-      "2097d9d0cc2e4d2593dcda3278e845a6"
-     ]
-    },
-    "id": "4zgxr19Xst94",
-    "outputId": "fd2eae31-9155-4ad1-e9da-62d978ab47c6"
+    "tags": [
+     "remove_cell_html"
+    ]
    },
    "outputs": [
     {
@@ -1337,24 +1467,6 @@
     "#display(widgets.HBox([euler_widget,aa_widget]))\n",
     "#display(widgets.HBox([vector_widget,quaternion_widget]))\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "id": "N0ID-AWUst95"
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "id": "D9ts0TeFst95"
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -1378,7 +1490,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.5.2"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
