--- a/Book.ipynb
+++ b/Book.ipynb
@@ -85,7 +85,7 @@
     "  * [B.2. Matrix computations](MatrixComputations.ipynb) **20% complete**\n",
     "  * [B.3. Optimization](Optimization.ipynb) **text 90% complete, figures 10% complete**\n",
     "\n",
-    "* Appendix C. Computational methods \n",
+    "* Appendix C. Computational Methods \n",
     "\n",
     "  * [C.1. Data structures](DataStructures.ipynb)\n",
     "  * [C.2. Graph search](GraphSearch.ipynb)\n",
@@ -314,7 +314,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.5.2"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
