--- a/CoordinateTransformations.ipynb
+++ b/CoordinateTransformations.ipynb
@@ -109,10 +109,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\\begin{equation*}\n",
+    "$$\n",
     "\\mathbf{p} = \\begin{bmatrix}p_x \\\\\n",
     "p_y \\end{bmatrix}\n",
-    "\\end{equation*}"
+    "$$"
    ]
   },
   {
@@ -157,7 +157,10 @@
     "its coordinates relative to axes $X$, $Y$, and $Z$ and offset from an\n",
     "origin $O$ in 3D space where the axes cross. The parenthetical notation\n",
     "is equivalent to the column vector form:\n",
-    "$$\\mathbf{p} = \\begin{bmatrix} p_x \\\\ p_y \\\\ p_z \\end{bmatrix}.$$\n",
+    "\n",
+    "$$\n",
+    "  \\mathbf{p} = \\begin{bmatrix} p_x \\\\ p_y \\\\ p_z \\end{bmatrix}.\n",
+    "$$\n",
     "\n",
     "In 3D the coordinate frame consists of the origin $O$ and the mutually\n",
     "orthogonal axes $X$, $Y$, and $Z$. In this book we will use\n",
@@ -180,8 +183,13 @@
     "where $\\mathbf{q}$ gives the coordinates of $Q$ relative to the same\n",
     "reference frame. It has both a direction and a magnitude. In contrast, a\n",
     "*direction* does not have magnitude, and is a unit vector. The direction\n",
-    "from $P$ to $Q$ is given by $$\\frac{\\mathbf{q}-\\mathbf{p}}{\\|\\mathbf{q}-\\mathbf{p}\\|}.$$ In\n",
-    "2D, a direction can also be given as an angle $\\theta \\in [0,2\\pi)$ rad,\n",
+    "from $P$ to $Q$ is given by\n",
+    "\n",
+    "$$\n",
+    "    \\frac{\\mathbf{q}-\\mathbf{p}}{\\|\\mathbf{q}-\\mathbf{p}\\|}.\n",
+    "$$\n",
+    "\n",
+    "In 2D, a direction can also be given as an angle $\\theta \\in [0,2\\pi)$ rad,\n",
     "with the convention that the angle measures the counter-clockwise\n",
     "direction from the $X$ axis. The corresponding unit vector is\n",
     "$(\\cos(\\theta),\\sin(\\theta))$.\n",
@@ -216,8 +224,13 @@
     "The coordinates of a point $\\mathbf{p}$ after translation by a displacement\n",
     "$\\mathbf{d}$ can be computed by vector addition $\\mathbf{p} + \\mathbf{d}$.\n",
     "Interpolation and extrapolation between points $\\mathbf{p}$, $\\mathbf{q}$ is\n",
-    "specified by the equation $$\\mathbf{x}(u) = (1-u)\\mathbf{p} + u\\mathbf{q}$$ for\n",
-    "$u \\in \\mathbb{R}$. This equation starts at $\\mathbf{x}(0) = \\mathbf{p}$ at $u=0$, and\n",
+    "specified by the equation\n",
+    "\n",
+    "$$\n",
+    "    \\mathbf{x}(u) = (1-u)\\mathbf{p} + u\\mathbf{q}\n",
+    "$$\n",
+    "\n",
+    "for $u \\in \\mathbb{R}$. This equation starts at $\\mathbf{x}(0) = \\mathbf{p}$ at $u=0$, and\n",
     "ends at $\\mathbf{x}(1)=\\mathbf{q}$ at $u=1$. Extrapolation can be obtained with\n",
     "$u < 0$ or $u > 1$, as shown in <a href=\"#fig:LineEquation\">Figure 4.a</a>.\n",
     "\n",
@@ -243,8 +256,17 @@
     "through $\\mathbf{p}$ can be expressed in the form of all solutions $\\mathbf{x}$ to\n",
     "the equation $\\mathbf{x} \\cdot \\mathbf{p}^\\perp = 0$. Similarly, the line through\n",
     "points $P$ and $Q$ can be expressed as the equation\n",
-    "$$\\mathbf{x} \\cdot (\\mathbf{p} - \\mathbf{q})^\\perp = \\mathbf{p} \\cdot (\\mathbf{p} - \\mathbf{q})^\\perp$$\n",
-    "Another expression of lines is the following: $$\\mathbf{x} \\cdot \\mathbf{n} = c$$\n",
+    "\n",
+    "$$\n",
+    "    \\mathbf{x} \\cdot (\\mathbf{p} - \\mathbf{q})^\\perp = \\mathbf{p} \\cdot (\\mathbf{p} - \\mathbf{q})^\\perp\n",
+    "$$\n",
+    "\n",
+    "Another expression of lines is the following:\n",
+    "\n",
+    "$$\n",
+    "    \\mathbf{x} \\cdot \\mathbf{n} = c\n",
+    "$$\n",
+    "\n",
     "Where $\\mathbf{n}$ is orthogonal to the direction of the line and\n",
     "$c = \\mathbf{p} \\cdot \\mathbf{n}$ for any point $\\mathbf{p}$ on the line.\n",
     "(<a href=\"#fig:LineEquation\">Fig. 4.b.</a>)\n",
@@ -284,16 +306,23 @@
     "### Linear transformations\n",
     "\n",
     "A *linear transformation* is one that can be represented as a matrix\n",
-    "operation $$\\mathbf{y} = A\\mathbf{x}$$ where $\\mathbf{x} \\in \\mathbb{R}^m$,\n",
+    "operation\n",
+    "\n",
+    "$$\\mathbf{y} = A\\mathbf{x}$$\n",
+    "\n",
+    "where $\\mathbf{x} \\in \\mathbb{R}^m$,\n",
     "$\\mathbf{y} \\in \\mathbb{R}^n$, and A is an $m \\times n$ matrix. In particular, in\n",
     "2D, this operation takes the form\n",
-    "$$\\begin{bmatrix}q_x \\\\ q_y \\end{bmatrix} = \\begin{bmatrix}\n",
+    "\n",
+    "$$\n",
+    "\\begin{bmatrix}q_x \\\\ q_y \\end{bmatrix} = \\begin{bmatrix}\n",
     "a & b \\\\\n",
     "c & d\n",
     "\\end{bmatrix} \\begin{bmatrix}p_x \\\\ p_y \\end{bmatrix} = \\begin{bmatrix}\n",
     "a p_x + b p_y\\\\\n",
     "c p_x + d p_y\n",
-    "\\end{bmatrix}$$.\n",
+    "\\end{bmatrix}.\n",
+    "$$\n",
     "\n",
     "In 3D, a linear transformation takes the form "
    ]
@@ -302,7 +331,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$$ \\begin{bmatrix}\n",
+    "$$\n",
+    "\\begin{bmatrix}\n",
     "q_x \\\\\n",
     "q_y \\\\\n",
     "q_z \n",
@@ -319,7 +349,8 @@
     "a_{11} p_x + a_{12} p_y + a_{13} p_z \\\\\n",
     "a_{21} p_x + a_{22} p_y + a_{23} p_z \\\\\n",
     "a_{31} p_x + a_{32} p_y + a_{33} p_z \n",
-    "\\end{bmatrix}$$."
+    "\\end{bmatrix}.\n",
+    "$$"
    ]
   },
   {
@@ -349,10 +380,13 @@
     "([Fig. 5](#fig:Rotation2D)). Hence, to determine its coordinates in the\n",
     "original reference frame, we can use the fact that the coordinates of\n",
     "$X^\\prime$ and $Y^\\prime$ are known:\n",
-    "$$\\mathbf{p}^\\prime = p_x \\mathbf{x}^\\prime + p_y \\mathbf{y}^\\prime = \\begin{bmatrix}\n",
+    "\n",
+    "$$\n",
+    "\\mathbf{p}^\\prime = p_x \\mathbf{x}^\\prime + p_y \\mathbf{y}^\\prime = \\begin{bmatrix}\n",
     "p_x \\cos \\theta - p_y \\sin \\theta \\\\ \n",
     "p_x \\sin \\theta + p_y \\cos \\theta\n",
-    "\\end{bmatrix}.$$\n",
+    "\\end{bmatrix}.\n",
+    "$$\n",
     "\n",
     "***************\n",
     "\n",
@@ -369,10 +403,13 @@
     "A more compact and convenient way of writing this is with a matrix\n",
     "equation $$\\mathbf{p}^\\prime = R(\\theta) \\mathbf{p}$$ with the rotation matrix\n",
     "given by\n",
-    "$$R(\\theta) = \\begin{bmatrix}\n",
+    "\n",
+    "$$\n",
+    "R(\\theta) = \\begin{bmatrix}\n",
     "\\cos \\theta & -\\sin \\theta \\\\ \n",
     "\\sin \\theta & \\cos \\theta\n",
-    "\\end{bmatrix}.$$\n",
+    "\\end{bmatrix}.\n",
+    "$$\n",
     "\n",
     "There are several useful properties of such matrices:\n",
     "\n",
@@ -388,16 +425,21 @@
     "    $\\sin(-\\theta) = - \\sin(\\theta)$, the operation of rotating about\n",
     "    $-\\theta$ is equivalent to a matrix transpose:\n",
     "\n",
-    "$$R(-\\theta) = \\begin{bmatrix}\n",
-    "\\cos \\theta & \\sin \\theta \\\\ \n",
-    "-\\sin \\theta & \\cos \\theta\n",
-    "\\end{bmatrix} = R(\\theta)^T.$$\n",
+    "    $$\n",
+    "    R(-\\theta) = \\begin{bmatrix}\n",
+    "    \\cos \\theta & \\sin \\theta \\\\ \n",
+    "    -\\sin \\theta & \\cos \\theta\n",
+    "    \\end{bmatrix} = R(\\theta)^T.\n",
+    "    $$\n",
     "\n",
     "4.  Moreover, the transpose is equivalent to the matrix inverse:\n",
-    "    $$R(-\\theta) = R(\\theta)^T = R(\\theta)^{-1}.$$ In other words,\n",
-    "    rotation matrices are orthogonal.\n",
+    "\n",
+    "    $$R(-\\theta) = R(\\theta)^T = R(\\theta)^{-1}.$$\n",
+    "    \n",
+    "    In other words, rotation matrices are orthogonal.\n",
     "\n",
     "5.  Vector norms are invariant under rotation:\n",
+    "\n",
     "    $$\\| R(\\theta) \\mathbf{x} \\| = \\| \\mathbf{x} \\|.$$\n",
     "\n",
     "6.  The rotation matrix is only dependent on the argument's value modulo\n",
@@ -467,7 +509,11 @@
     "rotation. In other words, when a coordinate frame rotates by matrix $R$\n",
     "about the origin, the entries of the rotation matrix can be interpreted\n",
     "as:\n",
-    "$$R = \\begin{bmatrix} x_x & y_x & z_x \\\\ x_y & y_y & z_y \\\\ x_z & y_z & z_z \\end{bmatrix}$$\n",
+    "\n",
+    "$$\n",
+    "  R = \\begin{bmatrix} x_x & y_x & z_x \\\\ x_y & y_y & z_y \\\\ x_z & y_z & z_z \\end{bmatrix}\n",
+    "$$\n",
+    "\n",
     "where $(x_x,x_y,x_z)$ give the coordinates of the\n",
     "new $X$ axis in the old frame, $(y_x,y_y,y_z)$ gives the coordinates of\n",
     "the new $Y$ axis, and $(z_x,z_y,z_z)$ gives the coordinates of the new\n",
@@ -497,14 +543,23 @@
     "### Scaling\n",
     "\n",
     "Axis-aligned scaling in 2D about the origin can be represented as a\n",
-    "linear transform with matrix $$S(s_x,s_y) = \\begin{bmatrix}s_x & 0 \\\\ 0 & s_y \\end{bmatrix}$$\n",
+    "linear transform with matrix\n",
+    "\n",
+    "$$\n",
+    "  S(s_x,s_y) = \\begin{bmatrix}s_x & 0 \\\\ 0 & s_y \\end{bmatrix}\n",
+    "$$\n",
+    "\n",
     "where $s_x$ is the scaling about the $X$ direction and $s_y$ is the\n",
     "scaling about the $Y$ direction. If $s_x = s_y$ this is known as a\n",
     "uniform scaling.\n",
     "\n",
     "This definition can be generalized to $n$-D space using an $n$-D scaling\n",
     "vector $\\mathbf{s}$ which determines the scaling in each direction by mapping\n",
-    "to the diagonal of an $n \\times n$ matrix.. $$S(\\mathbf{s}) = diag(\\mathbf{s})$$"
+    "to the diagonal of an $n \\times n$ matrix:\n",
+    "\n",
+    "$$\n",
+    "  S(\\mathbf{s}) = diag(\\mathbf{s}).\n",
+    "$$"
    ]
   },
   {
@@ -519,9 +574,20 @@
     "matrices $A$ and $B$, respectively. When performing the operation of\n",
     "$T_2$ first to obtain $\\mathbf{y} = T_2(\\mathbf{x})$, then performing $T_1$ to\n",
     "obtain $\\mathbf{z}=T_1(\\mathbf{y})$, the ultimate result is:\n",
-    "$$\\mathbf{z} = T_1(T_2(\\mathbf{x}))$$ where it should be noted that $T_1$ appears\n",
+    "\n",
+    "$$\n",
+    "\\mathbf{z} = T_1(T_2(\\mathbf{x}))\n",
+    "$$\n",
+    "\n",
+    "where it should be noted that $T_1$ appears\n",
     "first in the equation even though it is performed after $T_2$. Expanding\n",
-    "this into matrix products, $$\\mathbf{z} = A B \\mathbf{x}$$ holding for all values\n",
+    "this into matrix products,\n",
+    "\n",
+    "$$\n",
+    "  \\mathbf{z} = A B \\mathbf{x}\n",
+    "$$\n",
+    "\n",
+    "holding for all values\n",
     "of $\\mathbf{x}$. As a result, the function composition $T_1 \\circ T_2$ is\n",
     "also a linear transformation with matrix $AB$.\n",
     "\n",
@@ -531,11 +597,26 @@
     "vector. We can think of this as first rotating by an angle $\\theta$ so\n",
     "that the $X$ axis is aligned with $\\mathbf{v}$, then performing an\n",
     "axis-aligned scaling, then rotating back to the original coordinate\n",
-    "frame: $$A = R(-\\theta) S(s,1) R(\\theta)$$ It so happens that\n",
-    "$$R(\\theta) = \\begin{bmatrix}v_x & v_y \\\\ -v_y & v_x \\end{bmatrix}$$ performs the rotation that\n",
-    "we desire. As a result we can compute: $$\\begin{aligned}\n",
+    "frame:\n",
+    "\n",
+    "$$\n",
+    "    A = R(-\\theta) S(s,1) R(\\theta).\n",
+    "$$\n",
+    "\n",
+    "It so happens that\n",
+    "\n",
+    "$$\n",
+    "    R(\\theta) = \\begin{bmatrix}v_x & v_y \\\\ -v_y & v_x \\end{bmatrix}\n",
+    "$$\n",
+    "\n",
+    "performs the rotation that\n",
+    "we desire. As a result we can compute:\n",
+    "\n",
+    "$$\n",
+    "\\begin{aligned}\n",
     "A & = \\begin{bmatrix}v_x & -v_y \\\\ v_y & v_x \\end{bmatrix} \\begin{bmatrix}s & 0 \\\\ 0 & 1 \\end{bmatrix} \\begin{bmatrix}v_x & v_y \\\\ -v_y & v_x \\end{bmatrix} = \\begin{bmatrix}v_x & -v_y \\\\ v_y & v_x \\end{bmatrix} \\begin{bmatrix}sv_x & sv_y \\\\ -v_y & v_x \\end{bmatrix} \\\\\n",
-    "  & = \\begin{bmatrix}s v_x^2 + v_y^2 & s v_x v_y - v_y v_x \\\\ s v_x v_y - v_x v_y & s v_y^2 + v_x^2 \\end{bmatrix} = I + (s-1)\\begin{bmatrix}v_x^2 & v_x v_y \\\\ v_x v_y & v_y^2\\end{bmatrix}\\end{aligned}$$\n",
+    "  & = \\begin{bmatrix}s v_x^2 + v_y^2 & s v_x v_y - v_y v_x \\\\ s v_x v_y - v_x v_y & s v_y^2 + v_x^2 \\end{bmatrix} = I + (s-1)\\begin{bmatrix}v_x^2 & v_x v_y \\\\ v_x v_y & v_y^2\\end{bmatrix}\\end{aligned}\n",
+    "$$\n",
     "\n",
     "Note that due to the non-symmetricity of matrix multiplication, order of\n",
     "transformation matters: a rotation followed by a scaling is not\n",
@@ -568,7 +649,12 @@
     "    in 3D, the orientation and volume of any tetrahedron does not\n",
     "    change.\n",
     "\n",
-    "The form of all rigid transforms is a rotation $R$ followed by an arbitrary translation $\\mathbf{t}$: $$T(\\mathbf{x}) = R \\mathbf{x} + \\mathbf{t}$$\n",
+    "The form of all rigid transforms is a rotation $R$ followed by an arbitrary translation $\\mathbf{t}$: \n",
+    "\n",
+    "$$\n",
+    "    T(\\mathbf{x}) = R \\mathbf{x} + \\mathbf{t}\n",
+    "$$\n",
+    "\n",
     "Which can be thought of applying a *rotation about the origin first*,\n",
     "and then a *translation second*. Proving that all rigid transforms have\n",
     "this form will be left as an exercise.\n",
@@ -587,14 +673,35 @@
     "The set of rigid transformations is called the *special Euclidean group*\n",
     "$SE(2)$ in 2D, and $SE(3)$ in 3D. Repeated application of rigid\n",
     "transformations also produce a rigid transformation. Given two rigid\n",
-    "transforms $$T_1(\\mathbf{x}) = R_1\\mathbf{x} + \\mathbf{t_1}$$ and\n",
-    "$$T_2(\\mathbf{x}) = R_2\\mathbf{x} + \\mathbf{t_2}$$ then the composite transform\n",
+    "transforms\n",
+    "\n",
+    "$$\n",
+    "    T_1(\\mathbf{x}) = R_1\\mathbf{x} + \\mathbf{t_1}\n",
+    "$$\n",
+    "\n",
+    "and\n",
+    "\n",
+    "$$\n",
+    "    T_2(\\mathbf{x}) = R_2\\mathbf{x} + \\mathbf{t_2}\n",
+    "$$\n",
+    "\n",
+    "then the composite transform\n",
     "$T_1 \\circ T_2$ is the operation of performing $T_2$ first, then $T_1$.\n",
     "If we let $\\mathbf{y} = T_2(\\mathbf{x})$, and $\\mathbf{z} = T_1(\\mathbf{y})$, then we\n",
     "obtain:\n",
-    "$$\\mathbf{z} = T_1(T_2(\\mathbf{x})) = R_1 (R_2\\mathbf{x} + \\mathbf{t_2}) + \\mathbf{t_1}.$$ By the\n",
+    "\n",
+    "$$\n",
+    "\\mathbf{z} = T_1(T_2(\\mathbf{x})) = R_1 (R_2\\mathbf{x} + \\mathbf{t_2}) + \\mathbf{t_1}.\n",
+    "$$\n",
+    "\n",
+    "By the\n",
     "distributive property of matrix multiplication, we have\n",
-    "$$\\mathbf{z} = R_1 R_2\\mathbf{x} + R_1 \\mathbf{t_2} + \\mathbf{t_1}.$$ This is simply a rigid\n",
+    "\n",
+    "$$\n",
+    "\\mathbf{z} = R_1 R_2\\mathbf{x} + R_1 \\mathbf{t_2} + \\mathbf{t_1}.\n",
+    "$$\n",
+    "\n",
+    "This is simply a rigid\n",
     "transform with rotation matrix $R_1 R_2$ and translation by\n",
     "$(R_1 \\mathbf{t_2} + \\mathbf{t_1})$."
    ]
@@ -1074,7 +1181,10 @@
     "\n",
     "*  Prove that all length-preserving transforms in 2D are either\n",
     "   rotations or rotations followed by a mirroring transform:\n",
-    "   $$T(\\mathbf{x}) = \\begin{bmatrix} -1 & 0 \\\\ 0 & 1 \\end{bmatrix} \\mathbf{x}.$$\n",
+    "   \n",
+    "   $$\n",
+    "   T(\\mathbf{x}) = \\begin{bmatrix} -1 & 0 \\\\ 0 & 1 \\end{bmatrix} \\mathbf{x}.\n",
+    "   $$\n",
     "   \n",
     "*  Produce the transform (i.e., rotation matrix $R$ and translation $\\mathbf{t}$) that\n",
     "   rotates any point $\\mathbf{x}$ by $45^\\circ$ about the point $(1,0)$. \n",
@@ -1181,7 +1291,9 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "remove_cell_html": true
+    "tags": [
+     "remove_cell_html"
+    ]
    },
    "source": [
     "## Interactive quiz"
@@ -1194,7 +1306,9 @@
     "code_folding": [
      0
     ],
-    "remove_cell_html": true
+    "tags": [
+     "remove_cell_html"
+    ]
    },
    "outputs": [
     {
@@ -1212,7 +1326,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f8f35bdee35f40edad36069caa3adaf9",
+       "model_id": "5cf924e654244ea099d9c724996377ad",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1228,7 +1342,7 @@
     "#This code must be run from the RoboticSystemsBook folder\n",
     "from IPython.display import display,Markdown\n",
     "from rsbook_code.assessment import quiz\n",
-    "quiz.show_coordinate_transforms()"
+    "quiz.show(\"coordinate_transforms\")"
    ]
   },
   {
@@ -1255,7 +1369,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.5.2"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
@@ -1284,7 +1398,12 @@
    "title_cell": "Table of Contents",
    "title_sidebar": "Contents",
    "toc_cell": false,
-   "toc_position": {},
+   "toc_position": {
+    "height": "calc(100% - 180px)",
+    "left": "10px",
+    "top": "150px",
+    "width": "335.188px"
+   },
    "toc_section_display": true,
    "toc_window_display": true
   }
