--- a/Geometry.ipynb
+++ b/Geometry.ipynb
@@ -4532,7 +4532,9 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "remove_cell_html": true
+    "tags": [
+     "remove_cell_html"
+    ]
    },
    "source": [
     "## Interactive quiz"
@@ -4545,7 +4547,9 @@
     "code_folding": [
      0
     ],
-    "remove_cell_html": true
+    "tags": [
+     "remove_cell_html"
+    ]
    },
    "outputs": [
     {
@@ -4606,7 +4610,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.5.2"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
