--- a/InverseKinematics.ipynb
+++ b/InverseKinematics.ipynb
@@ -2576,17 +2576,22 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "remove_cell_html"
+    ]
+   },
    "source": [
     "## Interactive quiz"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
-    "code_folding": [
-     0
+    "code_folding": [],
+    "tags": [
+     "remove_cell_html"
     ]
    },
    "outputs": [
@@ -2605,12 +2610,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "eddade65a13c4f438ec0fd5d8cd2dbd7",
+       "model_id": "b68800d79aca4db4b858dc32da74995a",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "VBox(children=(VBox(children=(HTMLMath(value='Q1. For a 6R robot and a task space denoting the 3D world coordi…"
+       "VBox(children=(HTML(value='<style>\\n            .correct { background:#8f8;padding:10px 25px 10px 25px;width:4…"
       ]
      },
      "metadata": {},
@@ -2621,13 +2626,15 @@
     "#This code must be run from the RoboticSystemsBook folder\n",
     "from IPython.display import display,Markdown\n",
     "from rsbook_code.assessment import quiz\n",
-    "quiz.show_inverse_kinematics()"
+    "quiz.show('inverse_kinematics')"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {
-    "id": "t5hu323m0P1q"
+    "tags": [
+     "remove_cell_html"
+    ]
    },
    "source": [
     "## Interactive examples\n",
@@ -2650,7 +2657,10 @@
     },
     "id": "lPEpLgpN0P1q",
     "outputId": "32653af4-34fb-4229-8f26-d93bc40db4d2",
-    "scrolled": false
+    "scrolled": false,
+    "tags": [
+     "remove_cell_html"
+    ]
    },
    "outputs": [
     {
