--- a/MotionPlanningHigherDimensions.ipynb
+++ b/MotionPlanningHigherDimensions.ipynb
@@ -1387,7 +1387,7 @@
     "   before finding a solution.  Lazy PRM may take more time than a standard PRM in this case.  What component\n",
     "   of Lazy PRM would be the cause of this computational overhead?\n",
     "\n",
-    "1. Does it make sense to build a lazy PRM in precomptuation for multi-query path planning?  If so, give\n",
+    "1. Does it make sense to build a lazy PRM in precomputation for multi-query path planning?  If so, give\n",
     "   some examples of what situations in which this approach would be useful.  If not, explain why not.\n",
     "\n",
     "1. In our discussion of shortcutting, path length was used as the objective function\n",
@@ -1408,6 +1408,63 @@
     "1. Write pseudocode for an $R$-neighborhood query for a $k$-d tree.  Implement this, double checking that\n",
     "   it works properly compared to a brute-force approach on random datasets.\n",
     "   \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "tags": [
+     "remove_cell_html"
+    ]
+   },
+   "source": [
+    "## Interactive quiz"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "code_folding": [
+     0
+    ],
+    "tags": [
+     "remove_cell_html"
+    ]
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<link rel=\"stylesheet\" href=\"//stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css\"/>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "0da6f6fd71ad41fb95980cd8bdb13bea",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "VBox(children=(HTML(value='<style>\\n            .correct { background:#8f8;padding:10px 25px 10px 25px;width:4…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "#This code must be run from the RoboticSystemsBook folder\n",
+    "from IPython.display import display,Markdown\n",
+    "from rsbook_code.assessment import quiz\n",
+    "quiz.show(\"motion_planning_higher_dimensions\")"
    ]
   },
   {
