--- a/WhatIsMotionPlanning.ipynb
+++ b/WhatIsMotionPlanning.ipynb
@@ -247,16 +247,26 @@
    "source": [
     "## Heuristic methods\n",
     "\n",
-    "As a counterpoint to the more principled approaches that we will begin to study in the next chapter and beyond, it is worth mentioning two heuristic methods that are often used in practice.  By \"heuristic\" it is meant that these methods are often useful to achieve satisfactory performance, but offer no guarantees about optimality or success.\n",
-    "\n",
+    "As a counterpoint to the more principled approaches that we will begin to study in the next chapter and beyond, it is worth mentioning two heuristic methods that are often used in practice.  By \"heuristic\" it is meant that these methods are often useful to achieve satisfactory performance, but offer no guarantees about optimality or success."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Behavior scripting\n",
     "\n",
     "In behavior scripting, the control signal sent to the robot's actuators is a direct function of its input sensor signals, which is programmed as a body of procedural code; e.g., a set of arithmetic operations and if-else statements.  This programmed logic becomes the body of the \"planner\", which does not actually explicitly plan anything. Behavior scripting has the appeal in that it provides novices with an easy pathway to start experimenting with robot behaviors.  For example, to follow a black line on a sheet of white paper, two brightness sensors can be used, one to the left and the other to the right of the line.  If the left sensor reads \"black\", turn the wheel more to the left and reduce the forward velocity.  If the right sensor reads \"black\", turn the wheel more to the right and reduce the forward velocity.  Otherwise, turn the wheel toward center, and increase the forward velocity.  Properly tuned, this behavior will do a reasonable job at following lines that are not too curved at a slow speed.\n",
     "\n",
     "A more complex behavior script can include some notion of memory that is maintained from step to step, such as a list of objects seen or past actions taken.  A common form of memory is used in a _state machine_, where the behavior switches between discrete modes depending on the sensor input or past actions taken.  In a pure state machine, the only thing that needs to be remembered is the index of the current state. State machines will be discussed in more detail in [Chapter 16](RobotControl.ipynb#State-machines).\n",
     "\n",
-    "With a bit of ingenuity (and a great deal of testing and tuning), engineers can produce behavior scripts that encode sophisticated behavior.  There is some degree of pride in crafting such behaviors, with the intelligence of the engineer manifesting itself in the appearance of intelligent behavior.  However, the challenge of this approach is that as the problem domain becomes more complex, the complexity of the program's logic (and the corresponding difficulty of programming good behavior) tends to grow exponentially.\n",
-    "\n",
+    "With a bit of ingenuity (and a great deal of testing and tuning), engineers can produce behavior scripts that encode sophisticated behavior.  There is some degree of pride in crafting such behaviors, with the intelligence of the engineer manifesting itself in the appearance of intelligent behavior.  However, the challenge of this approach is that as the problem domain becomes more complex, the complexity of the program's logic (and the corresponding difficulty of programming good behavior) tends to grow exponentially."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Generate-and-score\n",
     "\n",
     "A straightforward way of performing motion planning is a three step process:\n",
@@ -279,7 +289,7 @@
     "\n",
     "************************\n",
     "\n",
-    "This approach can be very computationally light, and even effective at solving some simpler problems.  However, because the generated paths usually do not reach all the way to the goal, this approach assumes that the problem requires minimal amounts of long-range deliberation. For example, consider the problem where the robot must exit a room before making progress to the goal.  Because the robot must sacrifice progress before making progress, it will be incredibly unlikely to find a path out of the first room, either using random paths or motion primitives.  This is known as a _local minimum_, which will be a reoccurring issue throughout robotics (and other fields of engineering as well)."
+    "This approach can be very computationally light, and even effective at solving some simpler problems.  However, because the generated paths usually do not reach all the way to the goal, this approach assumes that the problem requires minimal amounts of long-range deliberation. For example, consider the problem where the robot must exit a room before making progress to the goal.  Because the robot must sacrifice progress before making progress, it will be incredibly unlikely to find a path out of the first room, either using random paths or motion primitives.  This is known as a _local minimum_, which will be a reoccurring issue throughout robotics."
    ]
   },
   {
@@ -292,8 +302,13 @@
     "\n",
     "$$y : [0,1] \\rightarrow \\mathcal{C}$$\n",
     "\n",
-    "interpolating between initial and goal configurations $q_I = y(0)$ and $q_G = y(1)$.  There are as many ways to represent paths as there are ways to encode functions, but in robotics we typically use a handful of representations.\n",
-    "\n",
+    "interpolating between initial and goal configurations $q_I = y(0)$ and $q_G = y(1)$.  There are as many ways to represent paths as there are ways to encode functions, but in robotics we typically use a handful of representations.  The most common variants are described here."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Piecewise-linear paths\n",
     "\n",
     "For most of the motion planning chapters, we assume that a path is represented as a\n",
@@ -581,6 +596,63 @@
     "#### Quintic Hermite splines\n",
     "\n",
     "The quintic Hermite spline defines control points to include milestones and their 1st and second derivatives. The interpolation scheme enforce continuity of first and second derivatives (C2 continuity).\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "tags": [
+     "remove_code_html"
+    ]
+   },
+   "source": [
+    "## Interactive quiz"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "code_folding": [
+     0
+    ],
+    "tags": [
+     "remove_cell_html"
+    ]
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<link rel=\"stylesheet\" href=\"//stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css\"/>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "ee7345170a8f4ede836cbf7c6e0a3f13",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "VBox(children=(HTML(value='<style>\\n            .correct { background:#8f8;padding:10px 25px 10px 25px;width:4…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "#This code must be run from the RoboticSystemsBook folder\n",
+    "from IPython.display import display,Markdown\n",
+    "from rsbook_code.assessment import quiz\n",
+    "quiz.show(\"motion_planning\")"
    ]
   },
   {
