--- a/Kinematics.ipynb
+++ b/Kinematics.ipynb
@@ -3998,32 +3998,27 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "remove_cell_html"
+    ]
+   },
    "source": [
     "## Interactive quiz"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {
     "code_folding": [
      0
+    ],
+    "tags": [
+     "remove_cell_html"
     ]
    },
    "outputs": [
-    {
-     "data": {
-      "text/markdown": [
-       "## Interactive quiz"
-      ],
-      "text/plain": [
-       "<IPython.core.display.Markdown object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
     {
      "data": {
       "text/html": [
@@ -4039,12 +4034,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f9c716a774144f0cb1116ac2d3a4e2cf",
+       "model_id": "fc9309273f5241b2a8b7e2796168b65f",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "VBox(children=(VBox(children=(HTMLMath(value='Q1. The process of forward kinematics computes what quantity(ies…"
+       "VBox(children=(HTML(value='<style>\\n            .correct { background:#8f8;padding:10px 25px 10px 25px;width:4…"
       ]
      },
      "metadata": {},
@@ -4055,12 +4050,16 @@
     "#This code must be run from the RoboticSystemsBook folder\n",
     "from IPython.display import display,Markdown\n",
     "from rsbook_code.assessment import quiz\n",
-    "quiz.show_forward_kinematics()"
+    "quiz.show('forward_kinematics')"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "remove_cell_html"
+    ]
+   },
    "source": [
     "## Interactive examples\n",
     "\n",
@@ -4070,7 +4069,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "remove_cell_html"
+    ]
+   },
    "source": [
     "### 2R planar robot\n",
     "\n",
@@ -4083,6 +4086,9 @@
    "metadata": {
     "code_folding": [
      0
+    ],
+    "tags": [
+     "remove_cell_html"
     ]
    },
    "outputs": [
@@ -4157,7 +4163,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "remove_cell_html"
+    ]
+   },
    "source": [
     "### RP planar robot"
    ]
@@ -4168,6 +4178,9 @@
    "metadata": {
     "code_folding": [
      0
+    ],
+    "tags": [
+     "remove_cell_html"
     ]
    },
    "outputs": [
@@ -4250,6 +4263,9 @@
    "metadata": {
     "code_folding": [
      0
+    ],
+    "tags": [
+     "remove_cell_html"
     ]
    },
    "outputs": [
@@ -4341,7 +4357,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.5.2"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
